--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ko">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="./css/index.css">
+
 <body>
     <div class="wrap">
         <div class="header">
@@ -71,12 +73,14 @@
                 </div>
             </div>
             <div></div>
-            
+
         </div>
     </div>
 
     <div class="main">
-        <div></div>
+        <div class="back_img">
+
+        </div>
         <div></div>
         <div></div>
         <div></div>
@@ -86,4 +90,5 @@
 
     </footer>
 </body>
+
 </html>
